# Claire

./: .gitignore  Blocks.html  Chars.html  Classes.html  Conditionals.html  Dates and Times.html  File system.html  Free_dashable objects.html  Inspirations.html  Instantiation.html  Lists_comma Sets and Tuples.html  Makefile  Makefile.in  Methods.html  Miscellaneous.html  README.md  Reading.html  Rules.html  Signal Handling.html  Types.html  WCL syntax.html  What is CLAIRE _ask.html  claire.links  claire.presentation  cleantar.pl  comparisons.md  configure.in  documentation.md  step1.cl  step2.cl  step3.cl  tmpclaire.mk.in  unix_step2.cl.in  upgrade.cl  version.cl  whyXlClaire.md  xlclaire-v3.7.0.tgz  xlclaire-v3.7.5.tgz
TextMate/: update-bundle.cl
compile/: README  cgen.cl  copt.cl  gexp.cl  gstat.cl  gsystem.cl  gusage.cl  ocall.cl  ocontrol.cl  odefine.cl  osystem.cl  otool.cl
console/: clConsole.cpp  wclConsole.cpp
doc/: Blocks.html  Calls and Slot Access.html  Chars.html  Classes.html  Command line handling.html  Communication ports.html  Conditionals.html  Dates and Times.html  Debugging.html  Design.html  Environment variables.html  Escaping Types.html  Exception Handling.html  Features.html  File system.html  Free_dashable objects.html  Global Variables and Constants.html  Hypothetical Reasoning.html  Inspirations.html  Instantiation.html  Integers and Floats.html  Iterations.html  Lists_comma Sets and Tuples.html  Loops.html  Methods.html  Miscellaneous.html  Modules.html  Objects and Entities.html  Polymorphism.html  Printing.html  Process handling.html  Reading.html  Rules.html  Selectors_comma Properties and Operations.html  Serialization.html  Signal Handling.html  Strings.html  Symbols.html  Tables.html  Types.html  (+10 more)
docs/: Blocks.html  Calls and Slot Access.html  Chars.html  Classes.html  Command line handling.html  Communication ports.html  Conditionals.html  Dates and Times.html  Debugging.html  Design.html  Environment variables.html  Escaping Types.html  Exception Handling.html  Features.html  File system.html  Free_dashable objects.html  Global Variables and Constants.html  Hypothetical Reasoning.html  Inspirations.html  Instantiation.html  Integers and Floats.html  Iterations.html  Lists_comma Sets and Tuples.html  Loops.html  Methods.html  Miscellaneous.html  Modules.html  Objects and Entities.html  Polymorphism.html  Printing.html  Process handling.html  Reading.html  Rules.html  Selectors_comma Properties and Operations.html  Serialization.html  Signal Handling.html  Strings.html  Symbols.html  Tables.html  Types.html  (+10 more)
include/: Kernel.h  README  acconfig.h  claire.h  config.h.in  marie.h
kernel/: Kernel.cpp  README  clAlloc.cpp  clBag.cpp  clEnv.cpp  clPort.cpp  clReflect.cpp  clString.cpp  clSystem.cpp  cross.cpp
meta/: README  call.cl  cmdline.cl  codedoc.cl  complete.cl  control.cl  define.cl  file.cl  function.cl  inspect.cl  kernel.cl  method.cl  navigation.cl  object.cl  port.cl  pretty.cl  read.cl  scanf.cl  serialization.cl  signal.cl  syntax.cl  toplevel.cl  types.cl  wcl.cl
release/: Makefile.in  Makefile.in.unix  Makefile.in.unix.debug  Makefile.mvs  Makefile.mvs.in  Makefile.nt  Makefile.unix  README.txt  configure.in.unix  configure.unix.in  init.cl  init.cl.debug  install.cl  lmain.cl
release/xl/: claireinfo.xml.in  generate_claireinfo.cl  loader.mk
release/xl/loader/: loader.cpp  loader.h  loader_frontal.cpp
stable2/: Makefile  Makefile.in  Makefile.mvs  a.out  ccmain.cl  config.status  configure  init.cl  install.cl  lldb.txt  stable.mk  test.c
stable2/Darwin-i386-g++4.2.1/: cclaire  sclaire
stable2/csrc/: Core.cpp  Generate.cpp  Generate.cpp.in  Kernel.cpp  Language.cpp  Optimize.cpp  Optimize.cpp.in  Reader.cpp  Serialize.cpp  call.cpp  cclaire-s.cpp  ccmain.cpp  cgen.cpp  clAlloc.cpp  clBag.cpp  clConsole.cpp  clEnv.cpp  clNoConsole.cpp  clPort.cpp  clReflect.cpp  clString.cpp  clSystem.cpp  cmdline.cpp  complete.cpp  control.cpp  copt.cpp  define.cpp  file.cpp  function.cpp  gexp.cpp  gstat.cpp  gsystem.cpp  gusage.cpp.in  inspect.cpp  method.cpp  object.cpp  ocall.cpp  ocontrol.cpp  odefine.cpp  osystem.cpp  (+12 more)
stable2/include/: Core.h  Generate.h  Kernel.h  Language.h  Optimize.h  Reader.h  Serialize.h  ccmain.h  config.h  config.h.in
test/: testKernel.cpp  testiClaire.cpp  testmClaire.cpp
